--- a/app/globals.css
+++ b/app/globals.css
@@ -1,29 +1,10 @@
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
-}
-
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+body{
+  @apply bg-black-primary
 }
 
 input:-webkit-autofill,
@@ -42,9 +23,6 @@ select:-webkit-autofill:focus {
   color: white;
 }
 
-.ant-upload-wrapper .ant-upload-select {
-  display: block;
-}
 
 @layer utilities {
   .text-balance {
@@ -52,6 +30,6 @@ select:-webkit-autofill:focus {
   }
 }
 
-.ant-layout .ant-layout-sider {
-  background-color: #0e1111;
-}
+
+
+
